--- a/WebScrapping/Project_Code.ipynb
+++ b/WebScrapping/Project_Code.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = \"header-2 header-dt-1 main-title\"\n",
+    "#a = \"header-2 header-dt-1 main-title\"\n",
     "cj = http.cookiejar.MozillaCookieJar()\n",
     "opener = urllib.request.build_opener(urllib.request.HTTPCookieProcessor(cj))\n",
     "\n",
@@ -65,7 +65,7 @@
     "\n",
     "## For finding list of Contact urls on each category page \n",
     "link_list=[]\n",
-    "for nav_pages in range(0, n_pages):\n",
+    "for nav_pages in range(0, 1):\n",
     "    urls = \"https://www.houzz.in/professionals/\"+category_list[0]+\"/c/San-Francisco--CA/p/\"+str(nav_pages*15)\n",
     "    sourcecode = opener.open(urls).read()\n",
     "    soup_new = bs.BeautifulSoup(sourcecode)\n",
@@ -80,26 +80,62 @@
     "                continue\n",
     "            else:\n",
     "                print(\"test links\" , test)\n",
-    "                link_list.append(link)\n",
+    "                link_list.append(test)\n",
     "    cj.clear_session_cookies()\n",
     "    time.sleep(10)\n",
     "\n",
     "    \n",
     "for i in link_list :\n",
-    "    sourcecode = opener.open(i).read()\n",
-    "    soup_text = bs.BeautifulSoup(sourcecode)\n",
+    "    print(i)\n",
+    "    try:\n",
+    "        \n",
+    "        sourcecode = opener.open(i).read()\n",
+    "        soup_text = bs.BeautifulSoup(sourcecode)\n",
+    "    except:\n",
+    "        print(\"Unable to read source code:-\",i)\n",
+    "        \n",
+    "    try:\n",
+    "        contact_no = soup_text.find(\"span\", class_=\"pro-contact-text\").text\n",
+    "        print(contact_no)\n",
+    "    except:\n",
+    "           contact_no=\"Not available\"\n",
+    "    try:    \n",
+    "        website_link=soup_text.find(\"div\",class_=\"pro-contact-methods one-line trackMe\").find(\"a\").get(\"href\")\n",
+    "        print(website_link)\n",
+    "    except:\n",
+    "        website_link=\"Not available\"\n",
+    "    try:    \n",
+    "        company_name=soup_text.find(\"a\", class_=\"profile-full-name\").text\n",
+    "        print(company_name)\n",
+    "    except:\n",
+    "        company_name=\"Not available\"\n",
     "    \n",
-    "    contact_no = soup_text.findAll(\"span\", class_=\"pro-contact-text\").text\n",
+    "    contact_person=\"\"\n",
+    "    try:    \n",
+    "        for i in soup_text.find_all(\"div\",class_='info-list-text'):\n",
+    "        if 'Contact' in i.text:\n",
+    "                        \n",
+    "            print(i.text)\n",
+    "            break\n",
+    "    except:\n",
+    "        Contact_person=\"Not Available\"\n",
+    "    lst=[]\n",
+    "    try:    \n",
+    "        sourcecode_1 = opener.open(website_link+\"/contact/\").read()\n",
+    "        soup_text_1 = bs.BeautifulSoup(sourcecode_1)\n",
+    "        cj.clear_session_cookies()\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "        lst = re.findall('(\\w+@GastArchitects.com)', str(soup_text_1))\n",
+    "        print(lst)\n",
+    "    except:\n",
+    "        lst=[\"Not Available\"]\n",
+    "    print(\"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\")    \n",
+    "        #list1.append([1,2,3,4])       \n",
+    "    #print(contact_person)\n",
     "    time.sleep(10)\n",
+    "  \n",
     "    \n",
-    "    \n",
-    "                \n",
+    "        \n",
     "                \n",
     "                \n",
     "                \n",
@@ -195,6 +231,32 @@
     "            cj.clear_session_cookies()\n",
     "            print(\"Selenium Except Block\",str(e))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"\"\"jhkdjak:adhbmnadjk, ahjjahkn:\"ahjjhbda@GasArchitect.com\" \"\"\"\n",
+    "\n",
+    "lst = re.findall(':(\\S+@GasArchitect.com)', text)\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
